--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -1,4 +1,5 @@
 {
+    "login": "ログイン",
     "task": {
         "created_at": "登録日",
         "description": "詳細",
@@ -14,7 +15,9 @@
         },
         "button": {
             "add": "追加",
-            "update": "更新"
+            "update": "更新",
+            "list": "一覧"
         }
-    }
+    },
+    "signup": "登録"
 }
